--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-4" >
 
                 </div class="row" id="mars-facts">
-                    <h4>Mars Facts</h4>
+                    <h4><b>Mars Facts:</b></h4>
                     {{mars.facts | safe}}
 
                 </div>
