working out the bugs for the hemisphere images

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,42 @@
 
 
         </div>
+        <div class="row" id="hemispheres">
+            <div class="col-md-3">
+                <div class="media">
+                    <h3>{{mars.hemispheres[0].title}}</h3>
+                    <img href="{{mars.hemispheres[0].sm_hemisphere_img}}">
+
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="media">
+                    <h3>{{mars.hemispheres[1].title}}</h3>
+                    <img href="{{mars.hemispheres[1].sm_hemisphere_img}}">
+                    
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="media">
+                    <h3>{{mars.hemispheres[2].title}}</h3>
+                    <img href="{{mars.hemispheres[2].sm_hemisphere_img}}">
+                    
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="media">
+                    <h3>{{mars.hemispheres[3].title}}</h3>
+                    <img href="{{mars.hemispheres[3].sm_hemisphere_img}}">
+                    
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="media">
+                    
+                </div>
+            </div>
+
+        </div>
 
     </div>
 
