images are working, fine tuning text placement

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             <div class="col-md-8" id="mars-featured-image">
                 <div class="media">
                     <div class="media-body">
-                        <h2>Featured Image:</h2>
+                        <h3>Featured Image:</h3>
                         <img src="{{mars.featured_image}}" class="img-responsive" alt="Responsive image">
 
                     </div>
@@ -55,31 +55,32 @@
 
         </div>
         <div class="row" id="hemispheres">
+            <h2 text-align:"center"> <b>The Hemispheres of Mars</b> </h2>
             <div class="col-md-3">
                 <div class="media">
                     <h3>{{mars.hemispheres[0].title}}</h3>
-                    <img href="{{mars.hemispheres[0].sm_hemisphere_img}}">
+                    <img src="{{mars.hemispheres[0].sm_hemisphere_img}}" width=350 height=350>
 
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="media">
                     <h3>{{mars.hemispheres[1].title}}</h3>
-                    <img href="{{mars.hemispheres[1].sm_hemisphere_img}}">
+                    <img src="{{mars.hemispheres[1].sm_hemisphere_img}}" width=350 height=350>
                     
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="media">
                     <h3>{{mars.hemispheres[2].title}}</h3>
-                    <img href="{{mars.hemispheres[2].sm_hemisphere_img}}">
+                    <img src="{{mars.hemispheres[2].sm_hemisphere_img}}" width=350 height=350>
                     
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="media">
                     <h3>{{mars.hemispheres[3].title}}</h3>
-                    <img href="{{mars.hemispheres[3].sm_hemisphere_img}}">
+                    <img src="{{mars.hemispheres[3].sm_hemisphere_img}}" width=350 height=350>
                     
                 </div>
             </div>
