--- a/templates/index.html
+++ b/templates/index.html
@@ -6,92 +6,117 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title> Mission to Mars</title>
+    <style>
+        body {
+            background-color: #705132;
+        }
+        div {
+            background-color : #e6d6a7;
+        }
+        h1 {
+            font-family: sans-serif;
+            font-weight: bolder;
+            color: #e6d6a7;
+            font-size: xx-large;
+            !important
+
+        }
+        #title {
+            background-color: #a34918;
+            !important
+        }
+        #mars-img {
+            padding: 15px;
+            background-color:black;
+            max-width: 500px;
+            max-height: 500px;
+            align-content: center;
+            !important
+        }
+        #mars-facts {
+            background-color: #eedfcb;
+            !important
+        }
+        
+    </style>
 </head>
 <body>
     <!--All code for the body will be in this div tag -->
     <div class="container">
         <!-- Jumbotron Header-->
-        <div class="jumbotron text-center">
+        <div id="title" class="jumbotron text-center">
             <h1>Mission to Mars</h1>
             <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
 
         </div>
-        <!-- Mars News -->
-        <div class="row" id="mars_news">
-            <div class="col-md-12">
-                <div class="media">
-                    <div class="media-body">
-                        <h2>Latest Mars News:</h2>
-                        <h4 class="media-heading">{{mars.news_title}}</h4>
-                        <p>{{mars.news_summary}}</p>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-        
-        <div class="row">
-            <!-- Featured Image -->
-            <div class="col-md-8" id="mars-featured-image">
-                <div class="media">
-                    <div class="media-body">
-                        <h3>Featured Image:</h3>
-                        <img src="{{mars.featured_image}}" class="img-responsive" alt="Responsive image">
-
+        <div class="content">    
+            <!-- Mars News -->
+            <div class="row" id="mars_news">
+                <div class="col-md-8">
+                    <div class="media">
+                        <div class="media-body">
+                            <h2>Latest Mars News:</h2>
+                            <h4 class="media-heading">{{mars.news_title}}</h4>
+                            <p>{{mars.news_summary}}</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- Mars Facts-->
-            <div class="col-md-4" >
+            <div class="row">
+                <!-- Featured Image -->
+                <div class="col-md-6" id="mars-featured-image">
+                    <div class="media">
+                        <div class="media-body">
+                            <h3>Featured Image:</h3>
+                            <img src="{{mars.featured_image}}" class="img-responsive" alt="Responsive image">
+                        </div>
+                    </div>
+                </div>
+                <!-- Mars Facts-->
+                <div class="col-md-3" >
+                    </div class="row" id="mars-facts">
+                        <h4><b>Mars Facts:</b></h4>
+                        {{mars.facts | safe}}
 
-                </div class="row" id="mars-facts">
-                    <h4><b>Mars Facts:</b></h4>
-                    {{mars.facts | safe}}
+                    </div>
+                </div>    
+            <!-- Hemispheres of Mars -->       
+            <div class="row text-center" id="hemispheres">
+                <h2> <b>The Hemispheres of Mars</b> </h2>
+                <div class="col-md-6 text-center">
+                    <div class="media">
+                        <h3>{{mars.hemispheres[0].title}}</h3>
+                        <img id="mars-img" src="{{mars.hemispheres[0].sm_hemisphere_img}}">
 
+                    </div>
+                </div>
+                <div class="col-md-6 text-center">
+                    <div class="media">
+                        <h3 >{{mars.hemispheres[1].title}}</h3>
+                        <img id="mars-img" src="{{mars.hemispheres[1].sm_hemisphere_img}}">
+                        
+                    </div>
                 </div>
             </div>
-
-
+            <div class="row" id="hemispheres">
+                <div class="col-md-6 text-center">
+                    <div class="media">
+                        <p></br></br></p>
+                        <h3 >{{mars.hemispheres[2].title}}</h3>
+                        <img id="mars-img" src="{{mars.hemispheres[2].sm_hemisphere_img}}">
+                        
+                    </div>
+                </div>
+                <div class="col-md-6 text-center">
+                    <div class="media">
+                        <p></br></br></p>
+                        <h3>{{mars.hemispheres[3].title}}</h3>
+                        <img id="mars-img" src="{{mars.hemispheres[3].sm_hemisphere_img}}" width=600 height=600 align="left">
+                        
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row" id="hemispheres">
-            <h2 text-align:"center"> <b>The Hemispheres of Mars</b> </h2>
-            <div class="col-md-3">
-                <div class="media">
-                    <h3>{{mars.hemispheres[0].title}}</h3>
-                    <img src="{{mars.hemispheres[0].sm_hemisphere_img}}" width=350 height=350>
-
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="media">
-                    <h3>{{mars.hemispheres[1].title}}</h3>
-                    <img src="{{mars.hemispheres[1].sm_hemisphere_img}}" width=350 height=350>
-                    
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="media">
-                    <h3>{{mars.hemispheres[2].title}}</h3>
-                    <img src="{{mars.hemispheres[2].sm_hemisphere_img}}" width=350 height=350>
-                    
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="media">
-                    <h3>{{mars.hemispheres[3].title}}</h3>
-                    <img src="{{mars.hemispheres[3].sm_hemisphere_img}}" width=350 height=350>
-                    
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="media">
-                    
-                </div>
-            </div>
-
-        </div>
-
     </div>
 
 
