--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <div id="title" class="jumbotron text-center">
             <h1 style="font-family: sans-serif;font-weight: bolder;color:#e6d6a7;font-size:80px;">
                 <b>Mission to Mars</b></h1>
-            <p><a class="btn btn-warning btn-lg" href="/scrape" role="button" style="color:#705132"> Scrape New Data</a></p>
+            <p><a class="btn btn-warning btn-lg" href="/scrape" role="button" style="color:#705132"> <b>Scrape New Data</b></a></p>
 
         </div>
         <div class="content">    
@@ -79,14 +79,14 @@
                 <div class="col-md-6 text-center">
                     <div class="media">
                         <h3>{{mars.hemispheres[0].title}}</h3>
-                        <img id="mars-img" src="{{mars.hemispheres[0].sm_hemisphere_img}}">
+                        <img id="mars-img" class="img-circle" src="{{mars.hemispheres[0].sm_hemisphere_img}}">
 
                     </div>
                 </div>
                 <div class="col-md-6 text-center">
                     <div class="media">
                         <h3 >{{mars.hemispheres[1].title}}</h3>
-                        <img id="mars-img" src="{{mars.hemispheres[1].sm_hemisphere_img}}">
+                        <img id="mars-img" class="img-circle" src="{{mars.hemispheres[1].sm_hemisphere_img}}">
                         
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="media">
                         <p></br></br></p>
                         <h3 >{{mars.hemispheres[2].title}}</h3>
-                        <img id="mars-img" src="{{mars.hemispheres[2].sm_hemisphere_img}}">
+                        <img id="mars-img" class="img-circle" src="{{mars.hemispheres[2].sm_hemisphere_img}}">
                         
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     <div class="media">
                         <p><br><br></p>
                         <h3>{{mars.hemispheres[3].title}}</h3>
-                        <img id="mars-img" src="{{mars.hemispheres[3].sm_hemisphere_img}}" width=600 height=600>
+                        <img id="mars-img" class="img-circle" src="{{mars.hemispheres[3].sm_hemisphere_img}}">
                         
                     </div>
                 </div>
