added download links to the ginormous TIF files

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,14 +78,15 @@
                 <h2> <b>The Hemispheres of Mars</b> </h2>
                 <div class="col-md-6 text-center">
                     <div class="media">
-                        <h3>{{mars.hemispheres[0].title}}</h3>
+                        <h3>{{mars.hemispheres[0].title}}<br> <small> <a href="{{mars.hemispheres[0].lg_hemisphere_img}}">Download Tif image (21 MB)</a></small></h3>
+
                         <img id="mars-img" class="img-circle" src="{{mars.hemispheres[0].sm_hemisphere_img}}">
 
                     </div>
                 </div>
                 <div class="col-md-6 text-center">
                     <div class="media">
-                        <h3 >{{mars.hemispheres[1].title}}</h3>
+                        <h3 >{{mars.hemispheres[1].title}}<br><small> <a href="{{mars.hemispheres[1].lg_hemisphere_img}}">Download Tif image (21 MB)</a></small></h3>
                         <img id="mars-img" class="img-circle" src="{{mars.hemispheres[1].sm_hemisphere_img}}">
                         
                     </div>
@@ -95,7 +96,7 @@
                 <div class="col-md-6 text-center">
                     <div class="media">
                         <p></br></br></p>
-                        <h3 >{{mars.hemispheres[2].title}}</h3>
+                        <h3 >{{mars.hemispheres[2].title}}<br><small> <a href="{{mars.hemispheres[2].lg_hemisphere_img}}">Download Tif image (21 MB)</a></small></h3>
                         <img id="mars-img" class="img-circle" src="{{mars.hemispheres[2].sm_hemisphere_img}}">
                         
                     </div>
@@ -103,7 +104,7 @@
                 <div class="col-md-6 text-center">
                     <div class="media">
                         <p><br><br></p>
-                        <h3>{{mars.hemispheres[3].title}}</h3>
+                        <h3>{{mars.hemispheres[3].title}}<br><small>  <a href="{{mars.hemispheres[2].lg_hemisphere_img}}">Download Tif image (21 MB)</a></small></h3>
                         <img id="mars-img" class="img-circle" src="{{mars.hemispheres[3].sm_hemisphere_img}}">
                         
                     </div>
