changed the text of the button

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <div id="title" class="jumbotron text-center">
             <h1 style="font-family: sans-serif;font-weight: bolder;color:#e6d6a7;font-size:80px;">
                 <b>Mission to Mars</b></h1>
-            <p><a class="btn btn-warning btn-lg" href="/scrape" role="button" style="color:#705132"> <b>Scrape New Data</b></a></p>
+            <p><a class="btn btn-warning btn-lg" href="/scrape" role="button" style="color:#705132"> <b>Click for the <br>Latest Updates</b></a></p>
 
         </div>
         <div class="content">    
